# IoT

./: .gitignore  README.md
lib/app/: .metadata  README.md  pubspec.yaml
lib/app/android/app/: build.gradle
lib/app/android/app/src/main/: AndroidManifest.xml
lib/app/lib/: main.dart
lib/app/lib/modules/gps/: geolocation.dart
lib/app/lib/modules/grpc/: app.proto  client.dart  grpc.dart
lib/app/lib/modules/sound/: sound.dart  sound_example.dart
lib/app/lib/modules/tts/: tts.dart
lib/lidar/: README.md
lib/lidar/Lidar-Lite/python/: len.py  sectr.py  test_measure.py
lib/ml/: CMakeLists.txt  README.md  build-for-docker.sh  build-for-mac.sh  build-protos.sh  build-raspberry.sh  build.sh  run.sh
lib/ml/client/: index.js  package-lock.json  package.json
lib/ml/protos/: lights.proto
lib/ml/src/: MJPEGWriter.cpp  MJPEGWriter.h  image.cpp  image.h  lights.grpc.pb.cc  lights.grpc.pb.h  lights.pb.cc  lights.pb.h  main.cpp  rpc.cpp  rpc.h
lib/sch/: README.sch.md
